# pcileech-memprocfs-mcp

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.json  engine_tools.py  main.py  pointer_scanner.py  pyproject.toml  requirements.txt  server.json  test_server.py  vmm_wrapper.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: setup.md  tools.md
