[project]
name = "nevercheese-pcileech-memprocfs-mcp"
version = "3.0.0"
description = "Linux-native MCP Server for PCILeech/MemProcFS - DMA memory operations via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Neverdecel" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "pcileech",
    "memprocfs",
    "dma",
    "reverse-engineering",
    "memory-forensics",
    "fpga",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp[cli]>=1.23.3",
    "memprocfs>=5.0.0",
    "leechcorepyc>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
nevercheese-pcileech-memprocfs-mcp = "main:run"

[project.urls]
Homepage = "https://github.com/Neverdecel/nevercheese-pcileech-memprocfs-mcp"
Repository = "https://github.com/Neverdecel/nevercheese-pcileech-memprocfs-mcp"
Issues = "https://github.com/Neverdecel/nevercheese-pcileech-memprocfs-mcp/issues"
Changelog = "https://github.com/Neverdecel/nevercheese-pcileech-memprocfs-mcp/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "vmm_wrapper.py",
    "pointer_scanner.py",
    "engine_tools.py",
    "config.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "config.json",
    "requirements.txt",
    "README.md",
    "LICENSE",
    "docs/",
]

[tool.black]
line-length = 100
target-version = ['py310']
